# CppBF

./: CMakeLists.txt  LICENSE  README.md  brainfuck.cpp
inc/: data.hpp  expression.hpp  factory.hpp  parser.hpp
src/: expression.cpp  factory.cpp  main.cpp  parser.cpp
